test/libyul/yulSyntaxTests/function_shadowing_outside_vars_2.yul
{
	let x
	function f() -> x {}
}
// ----
// DeclarationError 1395: (10-30): Variable name x already taken in this scope.
